methods.slug.SlugTracking.scala.code


def isFacingTrail():Boolean = {
  if (!estFaceMur) {
    avance();
    if (getCouleurSol()==Color.green) {
      recule();
      return true
    }
    recule();
    return false
  else {
    return false
  }
  }
}        

while (!estSurBiscuit) {
  if (isFacingTrail) {
    avance();
  }
  else {
    gauche();
  }
}